<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marif.bloodapp.Page.UserBio">

    <ImageView
        android:id="@+id/bannerbiodata"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        app:srcCompat="@android:color/holo_red_dark"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userbio"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@android:color/background_light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_below="@id/bannerbiodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_10sdp">

        <EditText
            android:id="@+id/height_userbio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:hint="@string/hieght"
            android:inputType="number"
            android:textSize="@dimen/_17sdp" />

        <EditText
            android:id="@+id/weight_userbio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/height_userbio"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:hint="@string/weight"
            android:inputType="number"
            android:textSize="@dimen/_17sdp" />

        <EditText
            android:id="@+id/dob_userbio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight_userbio"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:hint="@string/dob"
            android:inputType="text"
            android:textSize="@dimen/_17sdp" />

     <TextView
         android:textSize="@dimen/_17sdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/dob_userbio"
         android:id="@+id/bloodgrouptitle"
         android:layout_marginLeft="@dimen/_10sdp"
         android:layout_marginRight="@dimen/_10sdp"
         android:text="@string/bloodtype"
         />

        <Spinner
            android:id="@+id/bloodtype_userbio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_below="@+id/bloodgrouptitle"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:prompt="@string/bloodtype"
            android:entries="@array/bloodtypes"
            android:textSize="@dimen/_17sdp"

            />
        <Button
            android:id="@+id/done_userbio"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/_18sdp"
            android:onClick="goToHomeAfterSignup"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"

            />
    </RelativeLayout>

</RelativeLayout>
