<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marif.bloodapp.Page.AboutUs">
    <ImageView
        android:id="@+id/verification_banner"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        app:srcCompat="@android:color/holo_red_dark"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/verification_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@android:color/background_light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/verification_banner"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/verification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/verificationtext"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sdp"></TextView>

        <EditText
            android:id="@+id/four_digit_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verification_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="4-Digit Code"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="@dimen/_17sdp" />

        <Button
            android:id="@+id/Verify"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/four_digit_code"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/_18sdp"
            android:onClick="goToUserBio"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/resend_code"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Verify"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/resendcode"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>
    </LinearLayout>


</RelativeLayout>
