<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marif.bloodapp.Page.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        app:srcCompat="@android:color/holo_red_dark"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@android:color/background_light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phone_input_signin"
        android:layout_alignStart="@+id/phone_input_signin"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="@dimen/_105sdp"
        android:text="@string/phone"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/apptext"/>
    <EditText
        android:id="@+id/phone_input_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/_260sdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textSize="@dimen/_18sdp"
        android:layout_below="@+id/textView6" />
    <!--   android:inputType="textEmailAddress"-->

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_input_signin_layout"
        android:layout_alignStart="@+id/password_input_signin_layout"
        android:layout_centerVertical="true"
        android:text="@string/password"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/apptext"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/_260sdp"
        android:id="@+id/password_input_signin_layout"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView7"
        app:passwordToggleContentDescription="view pass"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/darker_gray">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_input_signin"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorLink="@android:color/darker_gray"
            android:textSize="@dimen/_18sdp" />

    </android.support.design.widget.TextInputLayout>
  <!--  <EditText
        android:id="@+id/password_input_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/_260sdp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/_18sdp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />
-->
    <Button
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input_signin_layout"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/forgotpassword"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <Button
        android:layout_marginTop="@dimen/_50sdp"
        android:id="@+id/signin_signin"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/_18sdp"
        android:layout_below="@+id/forgot_password"
        android:layout_centerHorizontal="true"
        android:onClick="goToHomeAfterSignin"
        />

</RelativeLayout>
